package br.com.marianadmoreira.questao2.Decorator;

public interface TextComponent {
    String render();
}
